--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/logo.jpeg" alt="AABHAAN Logo" class="logo" />
+    <img src="./logo.jpeg" alt="AABHAAN Logo" class="logo" />
     <h1>BlockAI Consulting</h1>
     <nav>
       <ul>
